[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/user-interface/exploration-ui.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ButtonOpenItemsMenu" type="Button" parent="CanvasLayer/UI/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 70.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Items"
align = 0

[node name="ItemsMenu" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ItemsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ItemsMenuBody" type="VBoxContainer" parent="CanvasLayer/ItemsMenu/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="FocusedItem" type="HBoxContainer" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody"]
margin_right = 984.0
margin_bottom = 468.0
size_flags_vertical = 3

[node name="ItemImage" type="TextureRect" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/FocusedItem"]
margin_right = 64.0
margin_bottom = 468.0
texture = ExtResource( 1 )

[node name="ItemText" type="VBoxContainer" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/FocusedItem"]
margin_left = 68.0
margin_right = 984.0
margin_bottom = 468.0
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/FocusedItem/ItemText"]
margin_right = 916.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "Item Name"

[node name="ItemDescription" type="Label" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/FocusedItem/ItemText"]
margin_top = 35.0
margin_right = 916.0
margin_bottom = 49.0
text = "This is the description of the item being shown."

[node name="ItemList" type="HBoxContainer" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody"]
margin_top = 472.0
margin_right = 984.0
margin_bottom = 536.0

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/ItemList"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/ItemList"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="TextureButton3" type="TextureButton" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/ItemList"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/ItemList"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="TextureButton5" type="TextureButton" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/ItemList"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="ItemsMenuActions" type="HBoxContainer" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody"]
margin_top = 540.0
margin_right = 984.0
margin_bottom = 560.0
alignment = 2

[node name="ButtonUseItem" type="Button" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/ItemsMenuActions"]
margin_left = 783.0
margin_right = 820.0
margin_bottom = 20.0
text = "Use"

[node name="ButtonCombineItem" type="Button" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/ItemsMenuActions"]
margin_left = 824.0
margin_right = 893.0
margin_bottom = 20.0
text = "Combine"

[node name="ButtonCloseItemsMenu" type="Button" parent="CanvasLayer/ItemsMenu/MarginContainer/ItemsMenuBody/ItemsMenuActions"]
margin_left = 897.0
margin_right = 984.0
margin_bottom = 20.0
text = "Close Menu"
